# multi-agent-data-wrangler

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt  vercel.json
.cline/: delegation_plan.md  interfaces.md  project_state.json
.cline/tasks/: task_001_common.md  task_002_data_profiling.md  task_003_transformation.md  task_004_validation.md  task_005_quality_scoring.md  task_006_ranking.md  task_007_orchestrator.md  task_008_setup.md  task_009_web_ui.md
.cline/workers/: worker_1_common.md  worker_2_data_profiling.md  worker_3_quality_scoring.md  worker_4_transformation.md  worker_5_validation.md  worker_6_ranking.md  worker_7_orchestrator.md  worker_8_setup.md  worker_9_web_ui.md
config/: app_config.yaml  logging.yaml  pipeline.yaml
src/common/: __init__.py
src/data_profiling/: __init__.py  interfaces.py  missing_value_analyzer.py  profiler.py  schema_detector.py  statistical_summarizer.py
src/orchestrator/: __init__.py  agent_coordinator.py  cli.py  failure_recovery.py  interfaces.py  pipeline_manager.py  state_manager.py
src/quality_scoring/: __init__.py  comparator.py  composite_calculator.py  interfaces.py  scorer.py
src/ranking/: __init__.py  interfaces.py  ranker.py  scorer.py
src/transformation/: __init__.py  candidate_generator.py  dag.py  executor.py  interfaces.py  reversibility.py
src/validation/: __init__.py  integrity_validator.py  interfaces.py  leakage_detector.py  schema_validator.py  validator.py
tests/: conftest.py
tests/common/: test_config.py  test_logging.py  test_types.py
tests/data_profiling/: test_profiler.py  test_schema_detection.py
tests/fixtures/: expected_output.csv  sample_data.csv
tests/orchestrator/: test_pipeline.py
tests/quality_scoring/: __init__.py  test_composite.py  test_metrics.py
tests/ranking/: __init__.py  test_policies.py  test_ranker.py
tests/transformation/: test_candidate_generator.py  test_executor.py
web_app/: app.py  requirements.txt
(+42 files in other folders)
